--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello again.
         Look at this. Wow. Incredible
+        Looks like it's going to be a great day today!
     </h1>
 </body>
 </html>
